--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ streamlit>=1.32
 pandas>=2.0
 openpyxl>=3.1
 XlsxWriter>=3.1
+plotly>=5.15
+numpy>=1.24
+Pillow>=10.0
+requests>=2.31
+beautifulsoup4>=4.12
+lxml>=4.9
